Avoid jumping collapse icon

--- a/style/workspace/_palettes.scss
+++ b/style/workspace/_palettes.scss
@@ -33,11 +33,10 @@
       }
 
       > .palette-group-collapse > button {
-        padding: 0px 3px;
+        padding: 0px;
       }
 
       > .palette-group-tabs {
-        padding-left: 1px;
         width: 100%;
 
         > button {
